--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -30,7 +30,7 @@
         },
       };
     </script>
-    <title>Ethereum App</title>
+    <title>My Ethereum App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
